--- a/TOP_summary.html
+++ b/TOP_summary.html
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/*.xmsgs?&DataKey=Warning'>37 Warnings (6 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/*.xmsgs?&DataKey=Warning'>32 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>96</TD>
+<TD ALIGN=RIGHT>102</TD>
 <TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>96</TD>
+<TD ALIGN=RIGHT>102</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,31 +90,31 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>133</TD>
+<TD ALIGN=RIGHT>170</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>124</TD>
+<TD ALIGN=RIGHT>164</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>55</TD>
+<TD ALIGN=RIGHT>89</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>18</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>59</TD>
+<TD ALIGN=RIGHT>57</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -132,19 +132,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>9</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>2</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,62 +156,62 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>42</TD>
+<TD ALIGN=RIGHT>58</TD>
 <TD ALIGN=RIGHT>2,278</TD>
-<TD ALIGN=RIGHT>1%</TD>
+<TD ALIGN=RIGHT>2%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
-<TD ALIGN=RIGHT>68</TD>
+<TD ALIGN=RIGHT>80</TD>
 <TD ALIGN=RIGHT>4,556</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>133</TD>
+<TD ALIGN=RIGHT>177</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>47</TD>
-<TD ALIGN=RIGHT>133</TD>
-<TD ALIGN=RIGHT>35%</TD>
+<TD ALIGN=RIGHT>80</TD>
+<TD ALIGN=RIGHT>177</TD>
+<TD ALIGN=RIGHT>45%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>133</TD>
-<TD ALIGN=RIGHT>0%</TD>
+<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>177</TD>
+<TD ALIGN=RIGHT>3%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>86</TD>
-<TD ALIGN=RIGHT>133</TD>
-<TD ALIGN=RIGHT>64%</TD>
+<TD ALIGN=RIGHT>90</TD>
+<TD ALIGN=RIGHT>177</TD>
+<TD ALIGN=RIGHT>50%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>5</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>16</TD>
+<TD ALIGN=RIGHT>18</TD>
 <TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>28</TD>
+<TD ALIGN=RIGHT>32</TD>
 <TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT>12%</TD>
+<TD ALIGN=RIGHT>13%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>28</TD>
-<TD ALIGN=RIGHT>28</TD>
+<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT>32</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -354,7 +354,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.45</TD>
+<TD ALIGN=RIGHT>3.41</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -391,21 +391,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>lun. sept. 20 16:11:49 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/xst.xmsgs?&DataKey=Warning'>33 Warnings (6 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/xst.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.bld'>Translation Report</A></TD><TD>Current</TD><TD>lun. sept. 20 16:11:55 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>lun. sept. 20 16:12:06 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.par'>Place and Route Report</A></TD><TD>Current</TD><TD>lun. sept. 20 16:12:14 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/par.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>mar. sept. 21 18:28:16 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/xst.xmsgs?&DataKey=Warning'>28 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/xst.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.bld'>Translation Report</A></TD><TD>Current</TD><TD>mar. sept. 21 18:28:22 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>mar. sept. 21 18:28:32 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.par'>Place and Route Report</A></TD><TD>Current</TD><TD>mar. sept. 21 18:28:41 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/par.xmsgs?&DataKey=Warning'>4 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>lun. sept. 20 16:12:19 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>lun. sept. 20 16:12:26 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>mar. sept. 21 18:28:46 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/TOP.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>mar. sept. 21 18:28:53 2021</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. sept. 20 16:12:27 2021</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>lun. sept. 20 16:12:28 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>mar. sept. 21 18:28:54 2021</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/stetd/Documents/github/VHDL_AFPA/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>mar. sept. 21 18:28:55 2021</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/21/2021 - 12:22:00</center>
+<br><center><b>Date Generated:</b> 09/22/2021 - 08:22:34</center>
 </BODY></HTML>
