--- a/top_envsettings.html
+++ b/top_envsettings.html
@@ -17,43 +17,43 @@
 <td>LD_LIBRARY_PATH</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/common/lib/lin64</font></td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/common/lib/lin64</font></td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/home/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
 </tr>
 <tr>
 <td>PATH</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/home/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/home/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/home/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/bin:<br>/bin:<br>/usr/local/games:<br>/usr/games</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/home/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/home/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/home/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/bin:<br>/bin:<br>/usr/local/games:<br>/usr/games</td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/home/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/home/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/home/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/bin:<br>/bin:<br>/usr/local/games:<br>/usr/games</font></td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/home/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/home/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/home/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/bin:<br>/bin:<br>/usr/local/games:<br>/usr/games</font></td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/home/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/home/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/home/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/bin:<br>/bin:<br>/usr/local/games:<br>/usr/games</td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/home/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/home/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/home/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/home/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/usr/local/bin:<br>/usr/bin:<br>/bin:<br>/usr/local/games:<br>/usr/games</td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE/</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE/</td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE/</font></td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE/</font></td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE/</td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE/</td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE</td>
 <td>/home/Xilinx/14.7/ISE_DS/ISE</td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE</font></td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/ISE</font></td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE</td>
+<td>/home/Xilinx/14.7/ISE_DS/ISE</td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>/home/Xilinx/14.7/ISE_DS/EDK</td>
 <td>/home/Xilinx/14.7/ISE_DS/EDK</td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/EDK</font></td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/EDK</font></td>
+<td>/home/Xilinx/14.7/ISE_DS/EDK</td>
+<td>/home/Xilinx/14.7/ISE_DS/EDK</td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>/home/Xilinx/14.7/ISE_DS/PlanAhead</td>
 <td>/home/Xilinx/14.7/ISE_DS/PlanAhead</td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/PlanAhead</font></td>
-<td><font color=gray>/home/Xilinx/14.7/ISE_DS/PlanAhead</font></td>
+<td>/home/Xilinx/14.7/ISE_DS/PlanAhead</td>
+<td>/home/Xilinx/14.7/ISE_DS/PlanAhead</td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -70,13 +70,13 @@
 <tr>
 <td>-ifn</td>
 <td>&nbsp;</td>
-<td>top.prj</td>
+<td>TOP.prj</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
 <td>-ofn</td>
 <td>&nbsp;</td>
-<td>top</td>
+<td>TOP</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -94,7 +94,7 @@
 <tr>
 <td>-top</td>
 <td>&nbsp;</td>
-<td>top</td>
+<td>TOP</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -392,70 +392,70 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td><font color=gray>-ol</font></td>
-<td><font color=gray>Place & Route Effort Level (Overall)</font></td>
-<td><font color=gray>high</font></td>
-<td><font color=gray>high</font></td>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>high</td>
+<td>high</td>
 </tr>
 <tr>
-<td><font color=gray>-xt</font></td>
-<td><font color=gray>Extra Cost Tables</font></td>
-<td><font color=gray>0</font></td>
-<td><font color=gray>0</font></td>
+<td>-xt</td>
+<td>Extra Cost Tables</td>
+<td>0</td>
+<td>0</td>
 </tr>
 <tr>
-<td><font color=gray>-ir</font></td>
-<td><font color=gray>Use RLOC Constraints</font></td>
-<td><font color=gray>OFF</font></td>
-<td><font color=gray>OFF</font></td>
+<td>-ir</td>
+<td>Use RLOC Constraints</td>
+<td>OFF</td>
+<td>OFF</td>
 </tr>
 <tr>
-<td><font color=gray>-t</font></td>
-<td><font color=gray>Starting Placer Cost Table (1-100) Map</font></td>
-<td><font color=gray>1</font></td>
-<td><font color=gray>0</font></td>
+<td>-t</td>
+<td>Starting Placer Cost Table (1-100) Map</td>
+<td>1</td>
+<td>0</td>
 </tr>
 <tr>
-<td><font color=gray>-r</font></td>
-<td><font color=gray>Register Ordering</font></td>
-<td><font color=gray>4</font></td>
-<td><font color=gray>4</font></td>
+<td>-r</td>
+<td>Register Ordering</td>
+<td>4</td>
+<td>4</td>
 </tr>
 <tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>None</font></td>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-lc</font></td>
-<td><font color=gray>LUT Combining</font></td>
-<td><font color=gray>off</font></td>
-<td><font color=gray>off</font></td>
+<td>-lc</td>
+<td>LUT Combining</td>
+<td>off</td>
+<td>off</td>
 </tr>
 <tr>
-<td><font color=gray>-o</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>top_map.ncd</font></td>
-<td><font color=gray>None</font></td>
+<td>-o</td>
+<td>&nbsp;</td>
+<td>TOP_map.ncd</td>
+<td>None</td>
 </tr>
 <tr>
-<td><font color=gray>-w</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>true</font></td>
-<td><font color=gray>false</font></td>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
 </tr>
 <tr>
-<td><font color=gray>-pr</font></td>
-<td><font color=gray>Pack I/O Registers/Latches into IOBs</font></td>
-<td><font color=gray>off</font></td>
-<td><font color=gray>off</font></td>
+<td>-pr</td>
+<td>Pack I/O Registers/Latches into IOBs</td>
+<td>off</td>
+<td>off</td>
 </tr>
 <tr>
-<td><font color=gray>-p</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>xc6slx16-csg324-3</font></td>
-<td><font color=gray>None</font></td>
+<td>-p</td>
+<td>&nbsp;</td>
+<td>xc6slx16-csg324-3</td>
+<td>None</td>
 </tr>
 </TABLE>
 <A NAME="Place and Route Property Settings"></A>
@@ -470,28 +470,28 @@
 <td><b>Default Value</b></td>
 </tr>
 <tr>
-<td><font color=gray>-intstyle</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>ise</font></td>
-<td><font color=gray>&nbsp;</font></td>
+<td>-intstyle</td>
+<td>&nbsp;</td>
+<td>ise</td>
+<td>&nbsp;</td>
 </tr>
 <tr>
-<td><font color=gray>-mt</font></td>
-<td><font color=gray>Enable Multi-Threading</font></td>
-<td><font color=gray>off</font></td>
-<td><font color=gray>off</font></td>
+<td>-mt</td>
+<td>Enable Multi-Threading</td>
+<td>off</td>
+<td>off</td>
 </tr>
 <tr>
-<td><font color=gray>-ol</font></td>
-<td><font color=gray>Place & Route Effort Level (Overall)</font></td>
-<td><font color=gray>high</font></td>
-<td><font color=gray>std</font></td>
+<td>-ol</td>
+<td>Place & Route Effort Level (Overall)</td>
+<td>high</td>
+<td>std</td>
 </tr>
 <tr>
-<td><font color=gray>-w</font></td>
-<td><font color=gray>&nbsp;</font></td>
-<td><font color=gray>true</font></td>
-<td><font color=gray>false</font></td>
+<td>-w</td>
+<td>&nbsp;</td>
+<td>true</td>
+<td>false</td>
 </tr>
 </TABLE>
 <A NAME="Operating System Information"></A>
@@ -508,31 +508,31 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/1618.550 MHz</td>
-<td>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/1652.908 MHz</td>
-<td><font color=gray>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/2362.281 MHz</font></td>
-<td><font color=gray>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/2333.624 MHz</font></td>
+<td>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/1978.298 MHz</td>
+<td>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/1716.649 MHz</td>
+<td>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/1773.157 MHz</td>
+<td>Intel(R) Pentium(R) CPU G620 @ 2.60GHz/2400.361 MHz</td>
 </tr>
 <tr>
 <td>Host</td>
 <td>pc-etd</td>
 <td>pc-etd</td>
-<td><font color=gray>pc-etd</font></td>
-<td><font color=gray>pc-etd</font></td>
+<td>pc-etd</td>
+<td>pc-etd</td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Debian</td>
 <td>Debian</td>
-<td><font color=gray>Debian</font></td>
-<td><font color=gray>Debian</font></td>
+<td>Debian</td>
+<td>Debian</td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>Debian GNU/Linux 10 (buster)</td>
 <td>Debian GNU/Linux 10 (buster)</td>
-<td><font color=gray>Debian GNU/Linux 10 (buster)</font></td>
-<td><font color=gray>Debian GNU/Linux 10 (buster)</font></td>
+<td>Debian GNU/Linux 10 (buster)</td>
+<td>Debian GNU/Linux 10 (buster)</td>
 </tr>
 </TABLE>
 </BODY> </HTML>
